--- a/settings/build.gradle
+++ b/settings/build.gradle
@@ -6,6 +6,14 @@ plugins {
 
 apply from: '../_ktlint.gradle'
 
+ext {
+    PUBLISH_GROUP_ID = 'de.charlex.settings'
+    PUBLISH_VERSION = '4.0.2'
+    PUBLISH_ARTIFACT_ID = 'settings'
+}
+
+apply from: '../_publish.gradle'
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -13,7 +21,6 @@ android {
     defaultConfig {
         minSdkVersion 23
         targetSdkVersion 30
-        versionName "2.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunnerArguments clearPackageData: 'true'
@@ -44,10 +51,9 @@ android {
 
 dependencies {
 
-    api "androidx.datastore:datastore-preferences:1.0.0-alpha07"
+    api "androidx.datastore:datastore-preferences:1.0.0-beta01"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
