--- a/settings/build.gradle
+++ b/settings/build.gradle
@@ -8,7 +8,7 @@ apply from: '../_ktlint.gradle'
 
 ext {
     PUBLISH_GROUP_ID = 'de.charlex.settings'
-    PUBLISH_VERSION = '4.0.2'
+    PUBLISH_VERSION = '4.0.3'
     PUBLISH_ARTIFACT_ID = 'settings'
 }
 
@@ -40,7 +40,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
     // Used for assembleAndroidTest
     packagingOptions {
@@ -51,11 +51,11 @@ android {
 
 dependencies {
 
-    api "androidx.datastore:datastore-preferences:1.0.0-beta01"
+    api "androidx.datastore:datastore-preferences:1.0.0"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
