--- a/.github/workflows/instrumentationtest.yml
+++ b/.github/workflows/instrumentationtest.yml
@@ -9,12 +9,14 @@ on:
       - main
 
 jobs:
-  test:
+  android-test:
     if: "! contains(toJSON(github.event.commits.*.message), '[skip ci]') && ! (contains(toJSON(github.event.commits.*.message), '[skip ') && contains(toJSON(github.event.commits.*.message), '#coverage'))"
     runs-on: macOS-latest # enables hardware acceleration in the virtual machine
+    timeout-minutes: 60
+
     strategy:
       matrix:
-        api-level: [29]
+        api-level: [23, 24, 25, 26, 27, 28, 29, 30]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 1.8
@@ -33,5 +35,6 @@ jobs:
         with:
           api-level: ${{ matrix.api-level }}
           arch: x86
+          emulator-build: 7425822 # https://github.com/ReactiveCircus/android-emulator-runner/issues/160
           disable-animations: true
           script: ./gradlew connectedCheck
