--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.21"
+    ext {
+        kotlin_version = "1.5.31"
+        roboelectric = "4.5.1"
+        buildConfig = [
+                'compileSdk': 31,
+                'minSdk'    : 26,
+                'targetSdk' : 31,
+        ]
+    }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.30.0'
 
@@ -21,6 +29,11 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+    }
+
+    ext {
+        PUBLISH_GROUP_ID = 'de.charlex.settings'
+        PUBLISH_VERSION = '1.0.0-rc01'
     }
 }
 
