build: removed api-level 30 from matrix test

--- a/.github/workflows/instrumentationtest.yml
+++ b/.github/workflows/instrumentationtest.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        api-level: [23, 24, 25, 26, 27, 28, 29, 30]
+        api-level: [23, 24, 25, 26, 27, 28, 29]
     steps:
       - uses: actions/checkout@v2
 
