--- a/_publish.gradle
+++ b/_publish.gradle
@@ -64,10 +64,12 @@ publishing {
             // Two artifacts, the `aar` (or `jar`) and the sources
             if (project.plugins.findPlugin("com.android.library")) {
                 artifact("$buildDir/outputs/aar/${project.getName()}-release.aar")
+                artifact androidSourcesJar
             } else {
                 artifact("$buildDir/libs/${project.getName()}-${version}.jar")
+                artifact("$buildDir/libs/${project.getName()}-${version}-sources.jar")
+                artifact("$buildDir/libs/${project.getName()}-${version}-javadoc.jar")
             }
-            artifact androidSourcesJar
 
             // Mostly self-explanatory metadata
             pom {
