--- a/settings-core-encryption/build.gradle
+++ b/settings-core-encryption/build.gradle
@@ -15,6 +15,8 @@ apply from: '../_publish.gradle'
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
+    withJavadocJar()
+    withSourcesJar()
 }
 
 dependencies {
