--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,11 @@ jobs:
           sudo bash -c "echo '$GPG_KEY_CONTENTS' | base64 -d > '$SIGNING_SECRET_KEY_RING_FILE'"
         # Builds the release artifacts of the library
       - name: Release build
-        run: ./gradlew assemble
+        run: ./gradlew assembleRelease
+
+        # Generates other artifacts
+      - name: Source jar and dokka
+        run: ./gradlew androidSourcesJar sourcesJar javadocJar
 
         # Runs upload, and then closes & releases the repository
       - name: Publish to MavenCentral
