refactor: added new enum preferences

--- a/settings-core-encryption/build.gradle
+++ b/settings-core-encryption/build.gradle
@@ -19,5 +19,6 @@ java {
 }
 
 dependencies {
+    api(project(":settings-core"))
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
