--- a/settings-sharedpreferences-encryption/build.gradle
+++ b/settings-sharedpreferences-encryption/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
 
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
 
