--- a/settings-sharedpreferences/build.gradle
+++ b/settings-sharedpreferences/build.gradle
@@ -64,6 +64,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.robolectric:robolectric:$roboelectric"
