--- a/settings-datastore/build.gradle
+++ b/settings-datastore/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     api "androidx.datastore:datastore-preferences:1.0.0"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation "org.robolectric:robolectric:$roboelectric"
