--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ subprojects {
 
     ext {
         PUBLISH_GROUP_ID = 'de.charlex.settings'
-        PUBLISH_VERSION = '1.0.0-rc05'
+        PUBLISH_VERSION = '1.0.0'
     }
 
     spotless {
