--- a/settings-datastore-compose/buildCompose.gradle
+++ b/settings-datastore-compose/buildCompose.gradle
@@ -5,7 +5,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
         useIR = true
-        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
+        freeCompilerArgs += [
+            "-Xopt-in=kotlin.RequiresOptIn"
+        ]
     }
     buildFeatures {
         compose true
