--- a/_publish.gradle
+++ b/_publish.gradle
@@ -107,6 +107,7 @@ def getBase64EncodedCredentials() {
 }
 
 publish.dependsOn lookForArtifacts
+publishReleasePublicationToSonatypeRepository.dependsOn lookForArtifacts
 
 publishing {
     publications {
