chore: update AGP, kotlin, compose

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,8 @@ captures/
 .idea/modules.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
+.idea/androidTestResultsUserPreferences.xml
+.idea/kotlinc.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
@@ -103,7 +105,8 @@ output.json
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
