--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = "1.5.31"
-        roboelectric = "4.6.1"
+        kotlin_version = '1.8.21'
+        roboelectric = "4.10.3"
         buildConfig = [
-                'compileSdk': 31,
+                'compileSdk': 33,
                 'minSdk'    : 23,
-                'targetSdk' : 31,
+                'targetSdk' : 33,
         ]
-        compose_version = '1.0.5'
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'com.android.tools.build:gradle:8.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
