--- a/settings-datastore/build.gradle
+++ b/settings-datastore/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     testImplementation "org.robolectric:robolectric:$roboelectric"
     testImplementation 'androidx.test:core:1.5.0'
     testImplementation 'androidx.test.ext:junit:1.1.5'
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
